// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`block.table > complex 1`] = `
[
  {
    "class": "block.emptyLine",
  },
  {
    "alignments": [
      "",
      "",
      "",
    ],
    "class": "block.table",
    "content": [
      {
        "class": "inline.text",
        "value": "A selection of relevant properties required for creating new merchants. (r - required, o - optional)
",
      },
      {
        "class": "inline.text",
        "value": "		",
      },
    ],
    "rows": [
      {
        "class": "block.table.row",
        "content": [
          {
            "class": "block.table.cell",
            "content": [
              {
                "class": "inline.text",
                "value": "Property          ",
              },
            ],
            "header": true,
          },
          {
            "class": "block.table.cell",
            "content": [
              {
                "class": "inline.text",
                "value": "   ",
              },
            ],
            "header": true,
          },
          {
            "class": "block.table.cell",
            "content": [
              {
                "class": "inline.text",
                "value": " Description                       ",
              },
            ],
            "header": true,
          },
        ],
      },
      {
        "class": "block.table.row",
        "content": [
          {
            "class": "block.table.cell",
            "content": [
              {
                "class": "inline.text",
                "value": "name              ",
              },
            ],
            "header": false,
          },
          {
            "class": "block.table.cell",
            "content": [
              {
                "class": "inline.text",
                "value": " r ",
              },
            ],
            "header": false,
          },
          {
            "class": "block.table.cell",
            "content": [
              {
                "class": "inline.text",
                "value": " Name of the site.                 ",
              },
            ],
            "header": false,
          },
        ],
      },
      {
        "class": "block.table.row",
        "content": [
          {
            "class": "block.table.cell",
            "content": [
              {
                "class": "inline.text",
                "value": "url               ",
              },
            ],
            "header": false,
          },
          {
            "class": "block.table.cell",
            "content": [
              {
                "class": "inline.text",
                "value": " r ",
              },
            ],
            "header": false,
          },
          {
            "class": "block.table.cell",
            "content": [
              {
                "class": "inline.text",
                "value": " URL of the site.                  ",
              },
            ],
            "header": false,
          },
        ],
      },
      {
        "class": "block.table.row",
        "content": [
          {
            "class": "block.table.cell",
            "content": [
              {
                "class": "inline.text",
                "value": "terms             ",
              },
            ],
            "header": false,
          },
          {
            "class": "block.table.cell",
            "content": [
              {
                "class": "inline.text",
                "value": " o ",
              },
            ],
            "header": false,
          },
          {
            "class": "block.table.cell",
            "content": [
              {
                "class": "inline.text",
                "value": " The terms and conditions.         ",
              },
            ],
            "header": false,
          },
        ],
      },
    ],
  },
]
`;

exports[`block.table > simple 1`] = `
[
  {
    "alignments": [
      "",
      "",
    ],
    "class": "block.table",
    "content": [
      {
        "class": "inline.text",
        "value": "Table Caption.",
      },
    ],
    "rows": [
      {
        "class": "block.table.row",
        "content": [
          {
            "class": "block.table.cell",
            "content": [
              {
                "class": "inline.text",
                "value": "Header A ",
              },
            ],
            "header": true,
          },
          {
            "class": "block.table.cell",
            "content": [
              {
                "class": "inline.text",
                "value": " Header B ",
              },
            ],
            "header": true,
          },
        ],
      },
      {
        "class": "block.table.row",
        "content": [
          {
            "class": "block.table.cell",
            "content": [
              {
                "class": "inline.text",
                "value": "value A  ",
              },
            ],
            "header": false,
          },
          {
            "class": "block.table.cell",
            "content": [
              {
                "class": "inline.text",
                "value": " value B  ",
              },
            ],
            "header": false,
          },
        ],
      },
    ],
  },
]
`;

exports[`parser.block.table > complex 1`] = `
[
  {
    "class": "block.emptyLine",
  },
  {
    "alignments": [
      "",
      "",
      "",
    ],
    "class": "block.table",
    "content": [
      {
        "class": "inline.text",
        "value": "A selection of relevant properties required for creating new merchants. (r - required, o - optional)
",
      },
      {
        "class": "inline.text",
        "value": "		",
      },
    ],
    "rows": [
      {
        "class": "block.table.row",
        "content": [
          {
            "class": "block.table.cell",
            "content": [
              {
                "class": "inline.text",
                "value": "Property          ",
              },
            ],
            "header": true,
          },
          {
            "class": "block.table.cell",
            "content": [
              {
                "class": "inline.text",
                "value": "   ",
              },
            ],
            "header": true,
          },
          {
            "class": "block.table.cell",
            "content": [
              {
                "class": "inline.text",
                "value": " Description                       ",
              },
            ],
            "header": true,
          },
        ],
      },
      {
        "class": "block.table.row",
        "content": [
          {
            "class": "block.table.cell",
            "content": [
              {
                "class": "inline.text",
                "value": "name              ",
              },
            ],
            "header": false,
          },
          {
            "class": "block.table.cell",
            "content": [
              {
                "class": "inline.text",
                "value": " r ",
              },
            ],
            "header": false,
          },
          {
            "class": "block.table.cell",
            "content": [
              {
                "class": "inline.text",
                "value": " Name of the site.                 ",
              },
            ],
            "header": false,
          },
        ],
      },
      {
        "class": "block.table.row",
        "content": [
          {
            "class": "block.table.cell",
            "content": [
              {
                "class": "inline.text",
                "value": "url               ",
              },
            ],
            "header": false,
          },
          {
            "class": "block.table.cell",
            "content": [
              {
                "class": "inline.text",
                "value": " r ",
              },
            ],
            "header": false,
          },
          {
            "class": "block.table.cell",
            "content": [
              {
                "class": "inline.text",
                "value": " URL of the site.                  ",
              },
            ],
            "header": false,
          },
        ],
      },
      {
        "class": "block.table.row",
        "content": [
          {
            "class": "block.table.cell",
            "content": [
              {
                "class": "inline.text",
                "value": "terms             ",
              },
            ],
            "header": false,
          },
          {
            "class": "block.table.cell",
            "content": [
              {
                "class": "inline.text",
                "value": " o ",
              },
            ],
            "header": false,
          },
          {
            "class": "block.table.cell",
            "content": [
              {
                "class": "inline.text",
                "value": " The terms and conditions.         ",
              },
            ],
            "header": false,
          },
        ],
      },
    ],
  },
]
`;

exports[`parser.block.table > simple 1`] = `
[
  {
    "alignments": [
      "",
      "",
    ],
    "class": "block.table",
    "content": [
      {
        "class": "inline.text",
        "value": "Table Caption.",
      },
    ],
    "rows": [
      {
        "class": "block.table.row",
        "content": [
          {
            "class": "block.table.cell",
            "content": [
              {
                "class": "inline.text",
                "value": "Header A ",
              },
            ],
            "header": true,
          },
          {
            "class": "block.table.cell",
            "content": [
              {
                "class": "inline.text",
                "value": " Header B ",
              },
            ],
            "header": true,
          },
        ],
      },
      {
        "class": "block.table.row",
        "content": [
          {
            "class": "block.table.cell",
            "content": [
              {
                "class": "inline.text",
                "value": "value A  ",
              },
            ],
            "header": false,
          },
          {
            "class": "block.table.cell",
            "content": [
              {
                "class": "inline.text",
                "value": " value B  ",
              },
            ],
            "header": false,
          },
        ],
      },
    ],
  },
]
`;
